2011-03-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Padding for fractional part comes at the
	start rather than at the end.

2011-03-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m (-getObjectValue:forString:errorDescription:):
	Add implementation.

2011-03-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m (-getObjectValue:forString:range:error:):
	Added implementation.
	* Headers/NSNumberFormatter.h: Fixed a couple of typos.

2011-03-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Resources/GNUmakefile
	(base-resources_RESOURCE_FILES_INSTALL_DIR): Removed.

2011-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* configure:
	* Headers/Additions/GNUstepBase:
	* Headers/Additions/GNUstepBase/Additions.h:
	* Headers/Additions/GNUstepBase/config.h.in:
	* Headers/Additions/GNUstepBase/.cvsignore:
	* Headers/Additions/GNUstepBase/CXXException.h:
	* Headers/Additions/GNUstepBase/DistributedObjects.h:
	* Headers/Additions/GNUstepBase/GCObject.h:
	* Headers/Additions/GNUstepBase/GNUstep.h:
	* Headers/Additions/GNUstepBase/GSBlocks.h:
	* Headers/Additions/GNUstepBase/GSConfig.h.in:
	* Headers/Additions/GNUstepBase/GSFileHandle.h:
	* Headers/Additions/GNUstepBase/GSFunctions.h:
	* Headers/Additions/GNUstepBase/GSIArray.h:
	* Headers/Additions/GNUstepBase/GSIMap.h:
	* Headers/Additions/GNUstepBase/GSLocale.h:
	* Headers/Additions/GNUstepBase/GSLock.h:
	* Headers/Additions/GNUstepBase/GSMime.h:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	* Headers/Additions/GNUstepBase/GSUnion.h:
	* Headers/Additions/GNUstepBase/GSVersionMacros.h:
	* Headers/Additions/GNUstepBase/GSXML.h:
	* Headers/Additions/GNUstepBase/NSArray+GNUstepBase.h:
	* Headers/Additions/GNUstepBase/NSAttributedString+GNUstepBase.h:
	* Headers/Additions/GNUstepBase/NSBundle+GNUstepBase.h:
	* Headers/Additions/GNUstepBase/NSCalendarDate+GNUstepBase.h:
	* Headers/Additions/GNUstepBase/NSData+GNUstepBase.h: