@@ -1,3 +1,9 @@
+2011-03-16  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSThread.m: Make +initialize thread safety warning optional
+	(disabled using GSSilenceInitializeWarning user default) and more
+	informative.
+
 2011-03-15  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSNumberFormatter.m: Padding for fractional part comes at the
